--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello Microverse</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1> Hello Microverse!</h1>
+<h1 class="head"> Hello Microverse!</h1>
 </body>
 </html>
